# SEO-Optimized-Blog-Writer-Agent

./: .env.example  .gitignore  README.md  pyproject.toml
agents/: crew.py  editor_agent.py  research_agent.py  seo_agent.py  strategist_agent.py  writer_agent.py
app/: main.py
app/pages/: generate.py  results.py
config/: llm_config.py  settings.py
config/prompts/: .gitkeep  editor.md  keyword_research.md  outline.md  seo_optimizer.md  serp_analysis.md  writer.md
graphs/: qa_graph.py  research_graph.py  writing_graph.py
models/: schemas.py  state.py
output/: .gitkeep  2026-03-08-air-duct-cleaning.md  2026-03-08-test-blog-post.md  2026-03-09-AI-data-centers-in-space.md  2026-03-09-ai-data-centers-in-space.md  2026-03-09-indias-crude-oil-crisis.md
tests/: conftest.py  test_agents.py  test_api.py  test_graphs.py  test_tools.py
tools/: markdown_tool.py  readability_tool.py  schema_markup_tool.py  serpapi_tool.py
